packages/switchy/schema/cli/tests/snapshots/validate_integration_tests__validate_verbose_mode_integration.snap
---
source: packages/switchy/schema/cli/tests/validate_integration_tests.rs
expression: filtered
---
Validating migration checksums
==============================
Migrations directory: [MIGRATIONS_DIR]
Migration table: __switchy_migrations
