packages/switchy/schema/cli/tests/snapshots/validate_integration_tests__validate_with_valid_migrations.snap
---
source: packages/switchy/schema/cli/tests/validate_integration_tests.rs
expression: filtered
---
Validating migration checksums
==============================
Migrations directory: [MIGRATIONS_DIR]
Migration table: __switchy_migrations

✓ All migration checksums are valid!
